--- a/index.html
+++ b/index.html
@@ -125,10 +125,18 @@
         .contact-info {
             margin: 20px 0;
             text-align: center;
-            line-height: 2;
+            display: flex;
+            justify-content: center;
+            flex-wrap: wrap;
+            gap: 20px;
+            font-size: 1.1em;
+        }
+        .contact-info div {
+            display: flex;
+            align-items: center;
+            gap: 10px;
         }
         .contact-info i {
-            margin-left: 10px;
             color: #6c757d;
         }
         @media (max-width: 768px) {
@@ -137,6 +145,10 @@
             }
             .book {
                 width: 90%;
+            }
+            .contact-info {
+                flex-direction: column;
+                gap: 10px;
             }
         }
     </style>
