--- a/index.html
+++ b/index.html
@@ -140,15 +140,16 @@
             color: #6c757d;
         }
         @media (max-width: 768px) {
+            .contact-info {
+                flex-direction: column;
+                align-items: center; /* إضافة هذه الخاصية لمحاذاة النص في الوسط */
+                gap: 10px;
+            }
             header img {
                 max-height: 150px;
             }
             .book {
                 width: 90%;
-            }
-            .contact-info {
-                flex-direction: column;
-                gap: 10px;
             }
         }
     </style>
