--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            gap: 10px;
+            gap: 20px;
         }
         .buttons a i {
             font-size: 1em;
@@ -139,11 +139,6 @@
         .contact-info i {
             color: #6c757d;
         }
-        .phone-number {
-            direction: ltr; /* عرض رقم الهاتف من اليسار إلى اليمين */
-            display: flex;
-            align-items: center;
-        }
         @media (max-width: 768px) {
             .contact-info {
                 flex-direction: column;
@@ -165,7 +160,155 @@
     </header>
     <h1>كتب مناهج التعليم العالي (PDF)</h1>
     <div class="container">
-        <!-- محتوى الكتب -->
+        <!-- الكتاب 1 -->
+        <div class="book">
+            <img src="covers/غلاف الأسرة في الإسلام.jpeg" alt="غلاف الكتاب">
+            <div class="book-title">الأسرة في الإسلام</div>
+            <div class="buttons">
+                <a href="books/الأسرة في الإسلام.pdf" target="_blank"><i class="fas fa-eye"></i> عرض</a>
+                <a href="books/الأسرة في الإسلام.pdf" download><i class="fas fa-arrow-circle-down"></i> تحميل</a>
+            </div>
+        </div>
+
+        <!-- الكتاب 2 -->
+        <div class="book">
+            <img src="covers/غلاف الطائفية في نظر الاسلام.jpeg" alt="غلاف الكتاب">
+            <div class="book-title">الطائفية في نظر الاسلام</div>
+            <div class="buttons">
+                <a href="books/الطائفية في نظر الاسلام.pdf" target="_blank"><i class="fas fa-eye"></i> عرض</a>
+                <a href="books/الطائفية في نظر الاسلام.pdf" download><i class="fas fa-arrow-circle-down"></i> تحميل</a>
+            </div>
+        </div>
+
+        <!-- الكتاب 3 -->
+        <div class="book">
+            <img src="covers/غلاف بحث حول أوقات الصلاة.jpeg" alt="غلاف الكتاب">
+            <div class="book-title">بحث أوقات الصلاة</div>
+            <div class="buttons">
+                <a href="books/بحث أوقات الصلاة.pdf" target="_blank"><i class="fas fa-eye"></i> عرض</a>
+                <a href="books/بحث أوقات الصلاة.pdf" download><i class="fas fa-arrow-circle-down"></i> تحميل</a>
+            </div>
+        </div>
+
+        <!-- الكتاب 4 -->
+        <div class="book">
+            <img src="covers/غلاف بحث حول التشويه الجسدي.jpeg" alt="غلاف الكتاب">
+            <div class="book-title">بحث حول التشويه الجسدي</div>
+            <div class="buttons">
+                <a href="books/بحث حول التشويه الجسدي.pdf" target="_blank"><i class="fas fa-eye"></i> عرض</a>
+                <a href="books/بحث حول التشويه الجسدي.pdf" download><i class="fas fa-arrow-circle-down"></i> تحميل</a>
+            </div>
+        </div>
+
+        <!-- الكتاب 5 -->
+        <div class="book">
+            <img src="covers/غلاف بحث حول التلقيح ا لصناعي.jpeg" alt="غلاف الكتاب">
+            <div class="book-title">بحث حول التلقيح الصناعي</div>
+            <div class="buttons">
+                <a href="books/بحث حول التلقيح الصناعي.pdf" target="_blank"><i class="fas fa-eye"></i> عرض</a>
+                <a href="books/بحث حول التلقيح الصناعي.pdf" download><i class="fas fa-arrow-circle-down"></i> تحميل</a>
+            </div>
+        </div>
+
+        <!-- الكتاب 6 -->
+        <div class="book">
+            <img src="covers/غلاف بحث حول الغناء.jpeg" alt="غلاف الكتاب">
+            <div class="book-title">بحث حول العناء</div>
+            <div class="buttons">
+                <a href="books/بحث حول العناء.pdf" target="_blank"><i class="fas fa-eye"></i> عرض</a>
+                <a href="books/بحث حول العناء.pdf" download><i class="fas fa-arrow-circle-down"></i> تحميل</a>
+            </div>
+        </div>
+
+        <!-- الكتاب 7 -->
+        <div class="book">
+            <img src="covers/غلاف بحث حول القصة فقهياً.jpeg" alt="غلاف الكتاب">
+            <div class="book-title">بحث حول القصة فقهياً</div>
+            <div class="buttons">
+                <a href="books/بحث حول القصة فقهياً.pdf" target="_blank"><i class="fas fa-eye"></i> عرض</a>
+                <a href="books/بحث حول القصة فقهياً.pdf" download><i class="fas fa-arrow-circle-down"></i> تحميل</a>
+            </div>
+        </div>
+
+        <!-- الكتاب 8 -->
+        <div class="book">
+            <img src="covers/غلاف بحث حول الكحول.jpeg" alt="غلاف الكتاب">
+            <div class="book-title">بحث حول الكحول</div>
+            <div class="buttons">
+                <a href="books/بحث حول الكحول.pdf" target="_blank"><i class="fas fa-eye"></i> عرض</a>
+                <a href="books/بحث حول الكحول.pdf" download><i class="fas fa-arrow-circle-down"></i> تحميل</a>
+            </div>
+        </div>
+
+        <!-- الكتاب 9 -->
+        <div class="book">
+            <img src="covers/غلاف بحث حول خصائص النبي.jpeg" alt="غلاف الكتاب">
+            <div class="book-title">بحث حول خصائص النبي</div>
+            <div class="buttons">
+                <a href="books/بحث حول خصائص النبي (ص).pdf" target="_blank"><i class="fas fa-eye"></i> عرض</a>
+                <a href="books/بحث حول خصائص النبي (ص).pdf" download><i class="fas fa-arrow-circle-down"></i> تحميل</a>
+            </div>
+        </div>
+
+        <!-- الكتاب 10 -->
+        <div class="book">
+            <img src="covers/غلاف بحث حول قاعدة الإلزام.jpeg" alt="غلاف الكتاب">
+            <div class="book-title">بحث حول قاعدة الإلزام</div>
+            <div class="buttons">
+                <a href="books/بحث حول قاعدة الإلزام.pdf" target="_blank"><i class="fas fa-eye"></i> عرض</a>
+                <a href="books/بحث حول قاعدة الإلزام.pdf" download><i class="fas fa-arrow-circle-down"></i> تحميل</a>
+            </div>
+        </div>
+
+        <!-- الكتاب 11 -->
+        <div class="book">
+            <img src="covers/غلاف بحث حول قراءة القرآن.jpeg" alt="غلاف الكتاب">
+            <div class="book-title">بحث حول قراءة القرآن الكريم</div>
+            <div class="buttons">
+                <a href="books/بحث حول قراءة القرآن الكريم.pdf" target="_blank"><i class="fas fa-eye"></i> عرض</a>
+                <a href="books/بحث حول قراءة القرآن الكريم.pdf" download><i class="fas fa-arrow-circle-down"></i> تحميل</a>
+            </div>
+        </div>
+
+        <!-- الكتاب 12 -->
+        <div class="book">
+            <img src="covers/غلاف فقه الأخلاق ج1.jpeg" alt="غلاف الكتاب">
+            <div class="book-title">فقه الأخلاق (الجزء الأول)</div>
+            <div class="buttons">
+                <a href="books/فقه الأخلاق (الجزء الأول).pdf" target="_blank"><i class="fas fa-eye"></i> عرض</a>
+                <a href="books/فقه الأخلاق (الجزء الأول).pdf" download><i class="fas fa-arrow-circle-down"></i> تحميل</a>
+            </div>
+        </div>
+
+        <!-- الكتاب 13 -->
+        <div class="book">
+            <img src="covers/غلاف فقه الأخلاق ج2.jpeg" alt="غلاف الكتاب">
+            <div class="book-title">فقه الأخلاق (الجزء الثاني)</div>
+            <div class="buttons">
+                <a href="books/فقه الأخلاق (الجزء الثاني).pdf" target="_blank"><i class="fas fa-eye"></i> عرض</a>
+                <a href="books/فقه الأخلاق (الجزء الثاني).pdf" download><i class="fas fa-arrow-circle-down"></i> تحميل</a>
+            </div>
+        </div>
+
+        <!-- الكتاب 14 -->
+        <div class="book">
+            <img src="covers/غلاف منة المنان.jpeg" alt="غلاف الكتاب">
+            <div class="book-title">منة المنان في الدفاع عن القرآن</div>
+            <div class="buttons">
+                <a href="books/منة المنان في الدفاع عن القرآن.pdf" target="_blank"><i class="fas fa-eye"></i> عرض</a>
+                <a href="books/منة المنان في الدفاع عن القرآن.pdf" download><i class="fas fa-arrow-circle-down"></i> تحميل</a>
+            </div>
+        </div>
+
+        <!-- الكتاب 15 -->
+        <div class="book">
+            <img src="covers/غلاف نظرات إسلامية في اعلان حقوق الإنسان.jpeg" alt="غلاف الكتاب">
+            <div class="book-title">نظرات إسلامية في اعلان حقوق الإنسان</div>
+            <div class="buttons">
+                <a href="books/نظرات إسلامية في اعلان حقوق الإنسان.pdf" target="_blank"><i class="fas fa-eye"></i> عرض</a>
+                <a href="books/نظرات إسلامية في اعلان حقوق الإنسان.pdf" download><i class="fas fa-arrow-circle-down"></i> تحميل</a>
+            </div>
+        </div>
     </div>
 
     <!-- أزرار المشاركة في أسفل الصفحة -->
@@ -180,7 +323,7 @@
     <!-- معلومات الاتصال -->
     <div class="contact-info">
         <div><i class="fas fa-map-marker-alt"></i> النجف الأشرف / حي الحسين/ شارع العكايشي</div>
-        <div class="phone-number"><i class="fas fa-phone"></i> 0770 606 2778</div>
+        <div><i class="fas fa-phone"></i> 2778 606 0770</div>
         <div><i class="fas fa-envelope"></i> alturaath.43@gmail.com</div>
     </div>
 
